--- a/src/audacity.desktop.in
+++ b/src/audacity.desktop.in
@@ -7,6 +7,7 @@ GenericName[da]=Lydredigeringsprogram
 GenericName[de]=Audio-Editor
 GenericName[el]=Επεξεργαστής ήχου
 GenericName[fr]=Éditeur audio
+GenericName[hi]=ध्वनि संपादक
 GenericName[pt_BR]=Editor de áudio
 GenericName[pt_PT]=Editor de áudio
 GenericName[ru]=Редактор звуковых файлов
@@ -18,6 +19,7 @@ Comment[da]=Optag og rediger lydfiler
 Comment[de]=Audio-Dateien aufnehmen und bearbeiten
 Comment[el]=Ηχογράφηση και επεξεργασία αρχείων ήχου
 Comment[fr]=Enregistrer et éditer des fichiers audio
+Comment[hi]=ऑडियो फ़ाइल अंकित व संपादित करता है
 Comment[pt_BR]=Gravar e editar arquivos de áudio
 Comment[pt_PT]=Gravar e editar ficheiros de áudio
 Comment[ru]=Запись и редактирование звуковых файлов
