audacity.desktop.in for nl (thanks to Thomas De Rocker)

--- a/src/audacity.desktop.in
+++ b/src/audacity.desktop.in
@@ -8,6 +8,7 @@ GenericName[de]=Audio-Editor
 GenericName[el]=Επεξεργαστής ήχου
 GenericName[fr]=Éditeur audio
 GenericName[hi]=ध्वनि संपादक
+GenericName[nl]=Geluidseditor
 GenericName[pt_BR]=Editor de áudio
 GenericName[pt_PT]=Editor de áudio
 GenericName[ru]=Редактор звуковых файлов
@@ -20,6 +21,7 @@ Comment[de]=Audio-Dateien aufnehmen und bearbeiten
 Comment[el]=Ηχογράφηση και επεξεργασία αρχείων ήχου
 Comment[fr]=Enregistrer et éditer des fichiers audio
 Comment[hi]=ऑडियो फ़ाइल अंकित व संपादित करता है
+Comment[nl]=Audiobestanden opnemen en bewerken
 Comment[pt_BR]=Gravar e editar arquivos de áudio
 Comment[pt_PT]=Gravar e editar ficheiros de áudio
 Comment[ru]=Запись и редактирование звуковых файлов
