Rewrite "Interface preferences displays self-names of languages" ...
See original attempt at commit 7ec5fd79df65cd3e54d3d14c52df106d71d06c53

This eliminates the need for a resource file at run-time.

locale/LanguageNames.txt is intended as a "source file" that is infrequently
changed as the set of supported languages changes.

The intermediate step, of appropriately copying that file into the C++ source
code in src/Languages.cpp, was done by hand.

In XCode, I set locale/LanguagesNames.txt and src/Languages.cpp to be
interpreted as Western encoding, and then the copy-paste was easy in the
editor.

The resulting C++ source code file now has string literals that are not 7-bit
ASCII.

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,7 +5,7 @@ ACLOCAL_AMFLAGS = -I m4
 bin_PROGRAMS = audacity$(EXEEXT)
 
 dist_doc_DATA = LICENSE.txt README.txt
-dist_pkgdata_DATA = presets/EQDefaultCurves.xml locale/LanguageNames.txt
+dist_pkgdata_DATA = presets/EQDefaultCurves.xml
 
 nobase_dist_pkgdata_DATA = \
    include/audacity/ConfigInterface.h \
