--- a/Makefile.in
+++ b/Makefile.in
@@ -513,7 +513,7 @@ SUBDIRS = help images lib-src po src tests
 ACLOCAL_AMFLAGS = -I m4
 bin_PROGRAMS = audacity$(EXEEXT)
 dist_doc_DATA = LICENSE.txt README.txt
-dist_pkgdata_DATA = presets/EQDefaultCurves.xml locale/LanguageNames.txt
+dist_pkgdata_DATA = presets/EQDefaultCurves.xml
 nobase_dist_pkgdata_DATA = \
    include/audacity/ConfigInterface.h \
    include/audacity/EffectAutomationParameters.h \
