--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,7 @@
 #if you want to work on this, please talk with us on
 # https://lists.sourceforge.net/lists/listinfo/audacity-devel
 #build time is circa 50 mins.
-version: 2.2.0-alpha-{build}
+version: 2.2.2-alpha-{build}
 image: Visual Studio 2013
 shallow_clone: true # reduce traffic
 install:
@@ -20,7 +20,7 @@ install:
     - xcopy %AUDACITY_ROOT%\win\wxWidgets_additions\wxWidgets-3.0.2 %WXWIN% /s /y /f
     - xcopy %WXWIN%\include\wx\setup_redirect.h %WXWIN%\include\wx\setup.h* /f
     # build wxWidgets
-    - msbuild /m %WXWIN%\build\msw\wx_vc12.sln "/p:Configuration=DLL Release;PlatformToolset=v120_xp" /target:adv,base,core,html,net,qa,wxexpat,wxjpeg,wxpng,wxtiff,wxzlib,xml /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
+    - msbuild /m %WXWIN%\build\msw\wx_vc12.sln "/p:Configuration=DLL Release;PlatformToolset=v120" /target:adv,base,core,html,net,qa,wxexpat,wxjpeg,wxpng,wxtiff,wxzlib,xml /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
 environment:
     WXWIN: '%APPVEYOR_BUILD_FOLDER%\..\wxWidgets'
     AUDACITY_ROOT: '%APPVEYOR_BUILD_FOLDER%'
@@ -33,7 +33,7 @@ environment:
 build_script: # build all targets except `help`
 - cmd: >-
     set PATH=%PATH%;%AUDACITY_ROOT%\win\packages\Gettext.Tools.0.19.8.1\tools\bin &&
-    msbuild /m win/audacity.sln /p:Configuration=Release;PlatformToolset=v120_xp /target:expat,filedialog,libflac++,libflac,libid3tag,libmad,libnyquist,libogg,libscorealign,libsndfile,libsoxr,libvamp,libvorbis,lv2,portaudio-v19,portmidi,portmixer,portsmf,sbsms,soundtouch,twolame,Audacity /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll" &&
+    msbuild /m win/audacity.sln /p:Configuration=Release;PlatformToolset=v120 /target:expat,filedialog,libflac++,libflac,libid3tag,libmad,libnyquist,libogg,libscorealign,libsndfile,libsoxr,libvamp,libvorbis,lv2,portaudio-v19,portmidi,portmixer,portsmf,sbsms,soundtouch,twolame,Audacity /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll" &&
     del /S win\Release\*.ipdb &&
     del /S win\Release\*.iobj &&
     del /S win\Release\*.lib &&
