AM_CONDITIONAL for portmixer
This is needed to build Audacity with portmixer disabled.

--- a/configure.ac
+++ b/configure.ac
@@ -540,7 +540,7 @@ AC_ARG_WITH(portmixer,
      [compile with PortMixer [default=yes]])],
   use_portmixer=$withval,
   use_portmixer="yes")
-
+AM_CONDITIONAL([USE_PORTMIXER], [test "$use_portmixer" = yes])
 
 AC_CANONICAL_HOST
 
