Long message target
This allows interactive display of the results of new commands that generate
lots of text.

--- a/win/Projects/Audacity/Audacity.vcxproj
+++ b/win/Projects/Audacity/Audacity.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="..\..\..\src\blockfile\NotYetAvailableException.cpp" />
     <ClCompile Include="..\..\..\src\commands\AudacityCommand.cpp" />
     <ClCompile Include="..\..\..\src\commands\CommandContext.cpp" />
+    <ClCompile Include="..\..\..\src\commands\CommandTargets.cpp" />
     <ClCompile Include="..\..\..\src\commands\Demo.cpp" />
     <ClCompile Include="..\..\..\src\commands\LoadCommands.cpp" />
     <ClCompile Include="..\..\..\src\commands\OpenSaveCommands.cpp" />
