Add envelope commands
- Added SetEnvelope (which can also delete/clear an envelope.)
- Added GetInfo: Type=Envelope

--- a/win/Projects/Audacity/Audacity.vcxproj
+++ b/win/Projects/Audacity/Audacity.vcxproj
@@ -144,6 +144,7 @@
     <ClCompile Include="..\..\..\src\commands\LoadCommands.cpp" />
     <ClCompile Include="..\..\..\src\commands\OpenSaveCommands.cpp" />
     <ClCompile Include="..\..\..\src\commands\SetClipCommand.cpp" />
+    <ClCompile Include="..\..\..\src\commands\SetEnvelopeCommand.cpp" />
     <ClCompile Include="..\..\..\src\commands\SetLabelCommand.cpp" />
     <ClCompile Include="..\..\..\src\commands\SetProjectCommand.cpp" />
     <ClCompile Include="..\..\..\src\Dependencies.cpp" />
@@ -485,6 +486,7 @@
     <ClInclude Include="..\..\..\src\commands\LoadCommands.h" />
     <ClInclude Include="..\..\..\src\commands\OpenSaveCommands.h" />
     <ClInclude Include="..\..\..\src\commands\SetClipCommand.h" />
+    <ClInclude Include="..\..\..\src\commands\SetEnvelopeCommand.h" />
     <ClInclude Include="..\..\..\src\commands\SetLabelCommand.h" />
     <ClInclude Include="..\..\..\src\commands\SetProjectCommand.h" />
     <ClInclude Include="..\..\..\src\DeviceChange.h" />
