Update POTFILES.in for new and removed files
find src include lib-src/FileDialog lib-src/mod-script-pipe lib-src/mod-null lib-src/mod-nyq-bench lib-src/lib-widget-extra -name '*.cpp' -o -name '*.h' -o -name '*.mm' | sort

--- a/locale/POTFILES.in
+++ b/locale/POTFILES.in
@@ -151,6 +151,7 @@ src/RealFFTf.h
 src/RealFFTf48x.cpp
 src/RealFFTf48x.h
 src/RefreshCode.h
+src/Registrar.h
 src/Resample.cpp
 src/Resample.h
 src/RevisionIdent.h
@@ -246,14 +247,16 @@ src/blockfile/SimpleBlockFile.cpp
 src/blockfile/SimpleBlockFile.h
 src/commands/AppCommandEvent.cpp
 src/commands/AppCommandEvent.h
-src/commands/AutomationCommands.cpp
-src/commands/AutomationCommands.h
+src/commands/AudacityCommand.cpp
+src/commands/AudacityCommand.h
 src/commands/BatchEvalCommand.cpp
 src/commands/BatchEvalCommand.h
 src/commands/Command.cpp
 src/commands/Command.h
 src/commands/CommandBuilder.cpp
 src/commands/CommandBuilder.h
+src/commands/CommandContext.cpp
+src/commands/CommandContext.h
 src/commands/CommandDirectory.cpp
 src/commands/CommandDirectory.h
 src/commands/CommandFlag.h
@@ -265,15 +268,18 @@ src/commands/CommandManager.h
 src/commands/CommandMisc.h
 src/commands/CommandSignature.cpp
 src/commands/CommandSignature.h
+src/commands/CommandTargets.cpp
 src/commands/CommandTargets.h
 src/commands/CommandType.cpp
 src/commands/CommandType.h
 src/commands/CompareAudioCommand.cpp
 src/commands/CompareAudioCommand.h
-src/commands/ExecMenuCommand.cpp
-src/commands/ExecMenuCommand.h
-src/commands/GetProjectInfoCommand.cpp
-src/commands/GetProjectInfoCommand.h
+src/commands/Demo.cpp
+src/commands/Demo.h
+src/commands/DragCommand.cpp
+src/commands/DragCommand.h
+src/commands/GetInfoCommand.cpp
+src/commands/GetInfoCommand.h
 src/commands/GetTrackInfoCommand.cpp
 src/commands/GetTrackInfoCommand.h
 src/commands/HelpCommand.cpp
@@ -282,6 +288,8 @@ src/commands/ImportExportCommands.cpp
 src/commands/ImportExportCommands.h
 src/commands/Keyboard.cpp
 src/commands/Keyboard.h
+src/commands/LoadCommands.cpp
+src/commands/LoadCommands.h
 src/commands/MessageCommand.cpp
 src/commands/MessageCommand.h
 src/commands/OpenSaveCommands.cpp
@@ -296,8 +304,14 @@ src/commands/ScriptCommandRelay.cpp
 src/commands/ScriptCommandRelay.h
 src/commands/SelectCommand.cpp
 src/commands/SelectCommand.h
-src/commands/SetProjectInfoCommand.cpp
-src/commands/SetProjectInfoCommand.h
+src/commands/SetClipCommand.cpp
+src/commands/SetClipCommand.h
+src/commands/SetEnvelopeCommand.cpp
+src/commands/SetEnvelopeCommand.h
+src/commands/SetLabelCommand.cpp
+src/commands/SetLabelCommand.h
+src/commands/SetProjectCommand.cpp
+src/commands/SetProjectCommand.h
 src/commands/SetTrackInfoCommand.cpp
 src/commands/SetTrackInfoCommand.h
 src/commands/Validators.h
